<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dtr.www.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textview_pf_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pf_title"
        android:textColor="@color/colorPFTitle"
        android:textSize="@dimen/textsize_24sp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_40dp"/>

    <Button
        android:id="@+id/button_sportify_streamer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pf_sportify_streamer"
        android:background="@color/colorPFButton"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textview_pf_title"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button_scores_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pf_scores_app"
        android:background="@color/colorPFButton"
        android:layout_centerInParent="true"
        android:layout_below="@+id/button_sportify_streamer"
        android:layout_marginTop="@dimen/margin_10dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button_library_app"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pf_library_app"
        android:background="@color/colorPFButton"
        android:layout_centerInParent="true"
        android:layout_below="@+id/button_scores_app"
        android:layout_marginTop="@dimen/margin_10dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button_build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pf_build_it_bigger"
        android:background="@color/colorPFButton"
        android:layout_centerInParent="true"
        android:layout_below="@+id/button_library_app"
        android:layout_marginTop="@dimen/margin_10dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button_xyz_reader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pf_xyz_reader"
        android:background="@color/colorPFButton"
        android:layout_centerInParent="true"
        android:layout_below="@+id/button_build_it_bigger"
        android:layout_marginTop="@dimen/margin_10dp"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/button_capstone_myownapp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pf_capstone"
        android:textColor="@color/colorWhite"
        android:background="@color/colorCaptoneButton"
        android:layout_centerInParent="true"
        android:layout_below="@+id/button_xyz_reader"
        android:layout_marginTop="@dimen/margin_10dp"
        android:onClick="onClick"/>


</RelativeLayout>
